--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -1,4 +1,34 @@
+// Set your brand colors
+// $purple: #8a4d76;
+// $pink: #fa7c91;
+// $brown: #757763;
+// $beige-light: #d0d1cd;
+// $beige-lighter: #eff0eb;
+
+// Path to Bulma's sass folder
+// @use "bulma/sass" with (
+//   $family-primary: '"Nunito", sans-serif',
+//   $grey-dark: $brown,
+//   $grey-light: $beige-light,
+//   $primary: $purple,
+//   $link: $pink,
+//   $control-border-width: 2px,
+//   $input-shadow: none
+// );
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
+html {
+  overflow-y: auto;
+}
+body {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
 // #app {
-//   width: 100%;
-//   height: 100%;
+//   width: 100vw;
+//   height: 100vh;
 // }
