front. создание топика + оптимизация списов вуджей

--- a/front/src/assets/styles/_common.scss
+++ b/front/src/assets/styles/_common.scss
@@ -1,33 +1,11 @@
-// @use "cirrus-ui/src/cirrus-ext" as * with (
-//   $config: (
-//     extend: (
-//       colors: (
-//         semantic: (
-//           "primary": blue,
-//           //   "midnight": #121062,
-//         ),
-//       ),
-//     ),
-//   )
-// );
-// @include utility(
-//     $base-class-name: 'bg',
-//     $class-value-pairs: (
-//         papayawhip: (
-//             background-color: papayawhip,
-//         ),
-//         peachpuff: (
-//             background-color: peachpuff,
-//         ),
-//         salmon: (
-//             background-color: salmon,
-//         ),
-//         tomato: (
-//             background-color: tomato,
-//         ),
-//     ),
-//     $variants: (
-//         'hover',
-//     ),
-//     $override: '!important'
-// );
+@use "@styles/colors";
+
+@mixin card() {
+  background: colors.$absorbing;
+  box-shadow: rgba(16, 0, 75, 0.05) 0px 5px 10px 0px;
+  transition: all 0.3s;
+
+  &:hover {
+    box-shadow: rgba(16, 0, 75, 0.15) 0px 10px 30px 0px;
+  }
+}
