--- a/front/src/assets/styles/_common.scss
+++ b/front/src/assets/styles/_common.scss
@@ -1,11 +1,13 @@
 @use "@styles/colors";
 
-@mixin card() {
+@mixin card($isHoverable: true) {
   background: colors.$absorbing;
   box-shadow: rgba(16, 0, 75, 0.05) 0px 5px 10px 0px;
   transition: all 0.3s;
 
-  &:hover {
-    box-shadow: rgba(16, 0, 75, 0.15) 0px 10px 30px 0px;
+  @if ($isHoverable) {
+    &:hover {
+      box-shadow: rgba(16, 0, 75, 0.15) 0px 10px 30px 0px;
+    }
   }
 }
