--- a/front/src/assets/styles/_wooj.scss
+++ b/front/src/assets/styles/_wooj.scss
@@ -1,96 +1,99 @@
 @use "@styles/colors";
 
 @mixin contentFormat() {
-  font-size: 1.2rem;
+  // font-size: 1.2rem;
 
-  /* List styles */
-  ul,
-  ol {
-    padding: 0 1rem;
-    margin: 1.25rem 1rem 1.25rem 0.4rem;
+  // p {
+  //   background: black;
+  //   margin: 0 !important;
+  //   margin-bottom: 20px;
+  // }
 
-    li p {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
-  }
+  // /* List styles */
+  // ul,
+  // ol {
+  //   padding: 0 1rem;
+  //   margin: 1.25rem 1rem 1.25rem 0.4rem;
+  // }
 
-  /* Heading styles */
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.1;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    text-wrap: pretty;
-    font-weight: bold;
-  }
-
+  // /* Heading styles */
   // h1,
-  // h2 {
-  //   // margin-top: 3.5rem;
-  //   // margin-bottom: 1.5rem;
-  // }
-
-  h1 {
-    font-size: 1.4rem;
-  }
-  // h2 {
-  //   font-size: 1.2rem;
-  // }
-  // h3 {
-  //   font-size: 1.1rem;
-  // }
+  // h2,
+  // h3,
   // h4,
   // h5,
   // h6 {
-  //   font-size: 1rem;
+  //   line-height: 1.1;
+  //   margin-top: 10px;
+  //   margin-bottom: 20px;
+  //   text-wrap: pretty;
+  //   font-weight: bold;
   // }
 
-  /* Code and preformatted text styles */
-  code {
-    background-color: colors.$grey;
-    border-radius: 0.4rem;
-    color: colors.$basic;
-    font-size: 1.2rem;
-    padding: 0.25em 0.3em;
-  }
+  // // h1,
+  // // h2 {
+  // //   // margin-top: 3.5rem;
+  // //   // margin-bottom: 1.5rem;
+  // // }
 
-  pre {
-    background: colors.$basic;
-    border-radius: 0.5rem;
-    color: colors.$absorbing;
-    font-family: monospace;
-    // font-weight: bold;
-    margin: 1.5rem 0;
-    padding: 20px 30px;
+  // h1 {
+  //   font-size: 1.4rem;
+  // }
+  // // h2 {
+  // //   font-size: 1.2rem;
+  // // }
+  // // h3 {
+  // //   font-size: 1.1rem;
+  // // }
+  // // h4,
+  // // h5,
+  // // h6 {
+  // //   font-size: 1rem;
+  // // }
 
-    code {
-      background: none;
-      color: colors.$primary;
-      font-size: 1.2rem;
-      padding: 0;
-    }
-  }
+  // /* Code and preformatted text styles */
+  // code {
+  //   background-color: colors.$grey;
+  //   border-radius: 0.4rem;
+  //   color: colors.$basic;
+  //   font-size: 1.2rem;
+  //   padding: 0.25em 0.3em;
+  // }
 
-  blockquote {
-    border-left: 6px solid colors.$grey;
-    font-style: italic;
-    margin: 1.5rem 0;
-    padding-left: 1rem;
-  }
+  // pre {
+  //   background: colors.$basic;
+  //   border-radius: 0.5rem;
+  //   color: colors.$absorbing;
+  //   font-family: monospace;
+  //   // font-weight: bold;
+  //   margin: 1.5rem 0;
+  //   padding: 20px 30px;
 
-  hr {
-    border: none;
-    border-top: 1px solid colors.$grey;
-    margin: 2rem 0;
-  }
+  //   code {
+  //     background: none;
+  //     color: colors.$primary;
+  //     font-size: 1.2rem;
+  //     padding: 0;
+  //   }
+  // }
 
-  strong {
-    color: inherit;
-    font-weight: 800;
-  }
+  // blockquote {
+  //   border-left: 6px solid colors.$grey;
+  //   font-style: italic;
+  //   margin: 1.5rem 0;
+  //   padding-left: 1rem;
+
+  //   background: black;
+  // }
+
+  // hr {
+  //   border: none;
+  //   border-top: 1px solid colors.$grey;
+  //   margin: 2rem 0;
+  // }
+
+  // strong {
+  //   color: inherit;
+  //   font-weight: 800;
+  // }
 }
