--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+@use "@styles/media";
 @use "@styles/colors";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import "vue3-perfect-scrollbar/style.css";
@@ -39,6 +40,15 @@ div {
   &__thumb-y {
     background-color: color.change(colors.$basic, $alpha: 70%) !important;
     width: 10px !important;
+  }
+}
+
+@include media.sm() {
+  .ps {
+    &__thumb-y {
+      background-color: color.change(colors.$basic, $alpha: 20%) !important;
+      width: 3px !important;
+    }
   }
 }
 
