--- a/front/src/assets/styles/_common.scss
+++ b/front/src/assets/styles/_common.scss
@@ -1,13 +1,17 @@
+@use "sass:color";
 @use "@styles/colors";
 
 @mixin card($isHoverable: true) {
+  $shadow-color: color.change(colors.$basic, $alpha: 8%);
+
   background: colors.$absorbing;
-  box-shadow: rgba(16, 0, 75, 0.05) 0px 5px 10px 0px;
+  box-shadow: $shadow-color 0px 10px 20px 5px;
   transition: all 0.3s;
 
   @if ($isHoverable) {
-    &:hover {
-      box-shadow: rgba(16, 0, 75, 0.15) 0px 10px 30px 0px;
+    &:hover,
+    &.active {
+      box-shadow: $shadow-color 0px 15px 50px 20px;
     }
   }
 }
