--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -22,8 +22,10 @@ div {
 
 #app {
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  // width: 100vw;
+  // height: 100vh;
+  // width: 100%;
+  // height: 100%;
 }
 
 .icon {
