--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -5,9 +5,6 @@
 @import "vue3-perfect-scrollbar/style.css";
 
 // Base
-// html {
-//   overflow: hidden;
-// }
 body {
   position: fixed;
   overflow: hidden;
@@ -25,13 +22,13 @@ div {
   box-sizing: border-box;
 }
 
-#app {
-  overflow: hidden;
-  // width: 100vw;
-  // height: 100vh;
-  // width: 100%;
-  // height: 100%;
-}
+// #app {
+//   overflow: hidden;
+//   // width: 100vw;
+//   // height: 100vh;
+//   // width: 100%;
+//   // height: 100%;
+// }
 
 .icon {
   display: flex;
