front. борьба со скроллом

--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -6,12 +6,12 @@
 
 // Base
 body {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  // position: fixed;
+  // overflow: hidden;
+  // top: 0;
+  // left: 0;
+  // width: 100vw;
+  // height: 100vh;
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
