front. борьба со скроллом
front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

front. борьба со скроллом

--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -12,6 +12,7 @@ body {
   // left: 0;
   // width: 100vw;
   // height: 100vh;
+  overflow-y: auto;
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
