--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -70,6 +70,7 @@ div {
 // WOOJ
 .wooj-content {
   font-size: 1rem;
+  line-height: 1.3em;
 
   p {
     margin: 0;
@@ -90,57 +91,44 @@ div {
   h4,
   h5,
   h6 {
-    line-height: 1.1;
+    line-height: 2em;
     margin-top: 10px;
     margin-bottom: 20px;
-    text-wrap: pretty;
+    // text-wrap: pretty;
     font-weight: bold;
   }
 
-  // h1,
-  // h2 {
-  //   // margin-top: 3.5rem;
-  //   // margin-bottom: 1.5rem;
-  // }
-
   h1 {
-    font-size: 1.4rem;
+    font-size: 1.4em;
   }
-  // h2 {
-  //   font-size: 1.2rem;
-  // }
-  // h3 {
-  //   font-size: 1.1rem;
-  // }
-  // h4,
-  // h5,
-  // h6 {
-  //   font-size: 1rem;
-  // }
 
   /* Code and preformatted text styles */
   code {
-    background-color: colors.$grey;
+    padding: 0.2em;
+    line-height: 2em;
     border-radius: 0.4rem;
+    background-color: colors.$grey;
     color: colors.$basic;
-    font-size: 1.2rem;
-    padding: 0.25em 0.3em;
+    // font-size: 1.2rem;
+    // overflow-wrap: break-word;
+    // word-break: break-word;
   }
 
   pre {
-    background: colors.$basic;
-    border-radius: 0.5rem;
-    color: colors.$absorbing;
-    font-family: monospace;
-    // font-weight: bold;
     margin: 1.5rem 0;
     padding: 20px 30px;
+    background: colors.$basic;
+    color: colors.$absorbing;
+    border-radius: 0.5rem;
+    font-family: monospace;
+    white-space: pre !important;
+    overflow: auto;
 
     code {
+      padding: 0;
+      font-size: 1.2rem;
       background: none;
       color: colors.$primary;
-      font-size: 1.2rem;
-      padding: 0;
     }
   }
 
@@ -154,12 +142,33 @@ div {
 
   hr {
     border: none;
-    border-top: 1px solid colors.$grey;
+    border-top: 1px solid color.change(colors.$grey, $lightness: 90%);
     margin: 15px 0;
   }
 
   strong {
     color: inherit;
     font-weight: 800;
+  }
+}
+
+@include media.sm() {
+  .wooj-content {
+    /* List styles */
+    ul,
+    ol {
+      padding: 0 0.5em;
+      margin: 1.25em 1em 1.25em 0.4em;
+    }
+
+    pre {
+      padding: 1.3em 1em;
+      margin: 1.3em 0;
+
+      code {
+        font-size: 1em;
+        line-height: 1em;
+      }
+    }
   }
 }
