front. обновление верстки

--- a/front/src/assets/styles/_colors.scss
+++ b/front/src/assets/styles/_colors.scss
@@ -18,3 +18,5 @@ $basic-light: color.change($basic, $alpha: 80%);
 // $grey: hsl(221, 14%, 96%);
 $grey: toLight($basic, 100%);
 $grey-strong: toLight($basic, 92%);
+
+$shadow: color.change($basic, $lightness: 60%, $saturation: 30%, $alpha: 15%);
