--- a/front/src/assets/styles/app.scss
+++ b/front/src/assets/styles/app.scss
@@ -97,8 +97,8 @@ div {
   }
 
   pre {
-    margin: 1.5rem 0;
-    padding: 20px 30px;
+    margin: 1.5em 0;
+    padding: 1.5em 2em;
     background: colors.$basic;
     color: colors.$absorbing;
     border-radius: 0.5rem;
@@ -108,7 +108,8 @@ div {
 
     code {
       padding: 0;
-      font-size: 1.2rem;
+      font-size: 1em;
+      line-height: 1em;
       background: none;
       color: colors.$primary;
     }
@@ -142,21 +143,9 @@ div {
 
 @include media.sm() {
   .wooj-content {
-    /* List styles */
-    ul,
-    ol {
-      // padding: 0 0.5em;
-      // margin: 1.25em 1em 1.25em 0.4em;
-    }
-
     pre {
       padding: 1.3em 1em;
       margin: 1.3em 0;
-
-      code {
-        font-size: 1em;
-        line-height: 1em;
-      }
     }
   }
 }
